; ModuleID = '/home/carl/AnghaBench/vlc/src/input/extr_demux.c_demux_GetTitle.c'
source_filename = "/home/carl/AnghaBench/vlc/src/input/extr_demux.c_demux_GetTitle.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@DEMUX_GET_TITLE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @demux_GetTitle(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = load i32, i32* @DEMUX_GET_TITLE, align 4
  %6 = call i64 @demux_Control(i32* %4, i32 %5, i32* %3)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 0, i32* %3, align 4
  br label %9

9:                                                ; preds = %8, %1
  %10 = load i32, i32* %3, align 4
  ret i32 %10
}

declare dso_local i64 @demux_Control(i32*, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
